Fix header bg for dark mode

--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -6,3 +6,13 @@
   right: 0;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
+
+@media (prefers-color-scheme: dark) {
+  #header-container {
+    background-color: #1a1a1a;
+  }
+
+  #header-container svg {
+    display: none;
+  }
+}
